--- a/inst/markdown/10.snowcrab_r_markdown_documents.md
+++ b/inst/markdown/10.snowcrab_r_markdown_documents.md
@@ -88,7 +88,7 @@ Most are simple R code snippets to create the documents: change as desired / req
 # Snow crab Science Advisory presentations:(4X .. old version)
 
 ```r 
-Move items from 11.4X.Advisory.Presentation.R into a markdown and then add the call here
+Move items from bio.snowcrab/inst/scripts/11.4X.Advisory.Presentation.R into a markdown and then add the call here
 ```
 
 
