--- a/inst/markdown/feeding_networks_report.qmd
+++ b/inst/markdown/feeding_networks_report.qmd
@@ -5,16 +5,14 @@ toc: true
 number-sections: true
 highlight-style: pygments
 editor:
-  render-on-save: true
+  render-on-save: false
 format:
   html: 
     code-fold: true
     html-math-method: katex
+    self-contained: true
   pdf:
     pdf-engine: lualatex
-    geometry: 
-      - top=30mm
-      - left=30mm
   docx: default 
 ---
  
