--- a/inst/markdown/03.biomass_index_carstm.md
+++ b/inst/markdown/03.biomass_index_carstm.md
@@ -49,6 +49,7 @@ The convolution of all three after posterior simulation is also known as a Hurdl
 ## Part 1 -- construct basic parameter list defining the main characteristics of the study
 
 ```r
+  require(aegis)
   require(bio.snowcrab)   # loadfunctions("bio.snowcrab") 
 
   year.assessment = 2023
