--- a/inst/markdown/04.snowcrab_fishery_model_turing.md
+++ b/inst/markdown/04.snowcrab_fishery_model_turing.md
@@ -47,6 +47,7 @@ Here we read in these results and prepare (format) them for timeseries analysis.
 ```{r}
 #| eval: true
 #| output: false
+  require(aegis)
   year.assessment = 2023
   p = bio.snowcrab::load.environment( year.assessment=year.assessment )
   modeldir = p$modeldir
