--- a/inst/markdown/snowcrab_working_paper.rmd
+++ b/inst/markdown/snowcrab_working_paper.rmd
@@ -86,7 +86,7 @@ Eg., run the following in R:
     fig.retina = 2,
     dpi=192
   )
-    
+  require(aegis)  
   year.assessment = params$year.assessment
   year_previous = year.assessment - 1
   p = bio.snowcrab::load.environment( year.assessment=year.assessment )
