add julia direct method

--- a/inst/markdown/04.snowcrab_fishery_model_turing.md
+++ b/inst/markdown/04.snowcrab_fishery_model_turing.md
@@ -81,12 +81,36 @@ There are two ways you can use this.
 
   1. Run within Julia directly.
 
-    This method is most flexible and [documented here](https://github.com/jae0/dynamical_model/blob/master/snowcrab/04.snowcrab_fishery_model.md), where more options are also shown.  But it will require learning the language Julia and Turing library. 
+    This method is most flexible and [documented here](https://github.com/jae0/dynamical_model/blob/master/snowcrab/04.snowcrab_fishery_model.md), where more options are also shown.  But it will require learning the language Julia and Turing library, but is very simple.
+
+```julia
+  year_assessment =2023
+
+  rootdir = homedir()
+  project_directory = joinpath( rootdir, "bio", "bio.snowcrab", "inst", "julia" ) 
+  bio_data_directory = joinpath( rootdir, "bio.data", "bio.snowcrab", "modelled", "1999_present_fb", "fishery_model_results", "turing1"  )
+  outputs_directory = joinpath( rootdir, "bio.data", "bio.snowcrab", "fishery_model" ) 
+ 
+  model_variation = "logistic_discrete_historical"   
+  model_outdir = joinpath( outputs_directory, string(year_assessment), model_variation )
+
+  # choose:
+  aulab ="cfanorth"     # 41 hrs (size struct), 20 min (logistic_discrete_hist)
+  aulab ="cfasouth"     # 65 hrs (size struct), min (logistic_discrete_hist)  
+  aulab ="cfa4x"        # 24 hrs (size struct), min (logistic_discrete_hist)
+
+  include( joinpath(project_directory, "snowcrab_startup.jl" ) )  # load libs
+  include( joinpath(project_directory, "logistic_discrete_functions.jl" ) )  # load core modelling functions
+
+  o = load( joinpath( bio_data_directory, "biodyn_biomass.RData" ), convert=true)   # load data; alter file path as required   
+
+  include( joinpath(project_directory, "logistic_discrete.jl" ) )   # continue with script inside "bio.snowcrab/inst/julia/logistic_discrete.jl" for more control
+
+```
 
   2. Run within R and call Julia indirectly, using the JuliaCall R-library (install that too). 
-  
 
-Here we will focus on the latter approach (#2).  As this and the other Julia files exist in a Git repository and we do not want to add more files there, we copy the necessary files to a temporary work location such that new output files (figures, html documents, Julia logs, etc.) can be created there. 
+As this and the other Julia files exist in a Git repository and we do not want to add more files there, we copy the necessary files to a temporary work location such that new output files (figures, html documents, Julia logs, etc.) can be created there. 
 
 
 ```{r}
@@ -237,3 +261,5 @@ include_graphics(c(fn1, fn2, fn3) )
   include_graphics(c(fn1, fn2, fn3) )
 #  \@ref(fig:logistic-hcr)
 ```
+
+ 
