--- a/inst/markdown/03.biomass_index_carstm.md
+++ b/inst/markdown/03.biomass_index_carstm.md
@@ -17,23 +17,17 @@ format:
 ---
  
 
-<!-- This is a Markdown document (better control as it has many steps .. but can be used as a Quarto report) -->
-
-<!-- 
-Can be used as a Quarto document: copy this file to a work directory (e.g., bio.data/bio.snowcrab/reports/) 
-and run Quarto from there:
-
-# quarto render 04_snowcrab_fishery_model_turing.qmd --to html 
-
-Can add "--to docx --to pdf" as additional documents, but their formatting is awkward and will require more work.  
--->
-
-<!-- NOTES: 
-
-Need to convert to Quatro format ...
-
--->
    
+<!-- Preamble
+
+This is a Markdown document designed to be viewed by a web browser. 
+
+We do not convert to a Quarto/Rmarkdown report as the step involved are complex and may require tweaking. 
+ 
+-->
+
+ 
+    
 
 ## Purpose
 
