--- a/inst/markdown/04.snowcrab_fishery_model_turing.md
+++ b/inst/markdown/04.snowcrab_fishery_model_turing.md
@@ -16,22 +16,17 @@ format:
   docx: default 
 ---
  
-<!-- This is a Markdown document (better control as it has many steps .. but can be used as a Quarto report) -->
+   
+<!-- Preamble
 
+This is a Markdown document designed to be viewed by a web browser. 
 
-<!-- 
-Copy this file to a work directory (e.g., bio.data/bio.snowcrab/reports/) 
-and run Quarto from there:
-
-# quarto render 04_snowcrab_fishery_model_turing.qmd --to html 
-
-Can add "--to docx --to pdf" as additional documents, but their formatting is awkward and will require more work.  
+TODO: convert to Quarto
+ 
 -->
 
-<!-- NOTES: 
-
--->
-
+ 
+ 
 
 ## Purpose
 
