--- a/inst/markdown/02.tables.qmd
+++ b/inst/markdown/02.tables.qmd
@@ -17,16 +17,18 @@ format:
 ---
 
 
-<!-- This is a Quarto document -->
+   
+<!-- Preamble
 
-<!-- To render: 
-Copy this file to a work directory (e.g., bio.data/bio.snowcrab/reports/) 
-and run Quarto from there:
+This is a Quarto document designed to render a HTML document. Run:
 
-# quarto render 02_tables.qmd --to html 
+  make 02.tables YR=2023 SOURCE~/bio/bio.snowcrab/inst/markdown WK=~/bio/bio.data/bio.snowcrab/reports 
 
-The other documenet options work but formatting is still bit off: --to docx --to pdf
+Alter directories to reflect setup or copy Makefile and alter defaults to your needs.
+
+ 
 -->
+
 
 <!-- NOTES: Make sure to have pulled observer data:
 
