average over all data

--- a/inst/markdown/04.snowcrab_fishery_model_turing.md
+++ b/inst/markdown/04.snowcrab_fishery_model_turing.md
@@ -21,6 +21,8 @@ format:
 
 This is a Markdown document designed to be viewed by a web browser. 
 
+make html FN=04.snowcrab_fishery_model_turing
+
 TODO: convert to Quarto
  
 -->
