--- a/inst/markdown/quick_test.rmd
+++ b/inst/markdown/quick_test.rmd
@@ -192,16 +192,50 @@ text( PC2 ~ PC1, labels=label, data=pcares, cex=0.8 )
 
 \tiny
  
-```{r bycatch-cpue-nens, out.width='12%', echo=FALSE, fig.align='center', fig.cap = 'Bycatch rates in ENS.' }
+```{r bycatch-cpue-nens, out.width='12%', echo=FALSE, fig.align='center', fig.cap = 'Bycatch rates in NENS.' }
 region="cfanorth"
 o = observer.db( DS="bycatch_summary", p=p,  yrs=p$yrs, region=region )   
+o$bycatch_table = o$bycatch_table[ which(o$bycatch_table$"Average/Moyen" > 1 ),]
+o$bycatch_table$"Average/Moyen" = round(o$bycatch_table$"Average/Moyen")
 o$bycatch_table[ o$bycatch_table==0 ] = NA
 o$bycatch_table[ is.na(o$bycatch_table) ] = "."
-o$bycatch_table_catch[ o$bycatch_table_catch==0 ] = NA
-o$bycatch_table_catch[ is.na(o$bycatch_table_catch) ] = "."
-#kable( o$bycatch_table, format="simple", row.names=FALSE)
 gt(o$bycatch_table)
 ``` 
 \normalsize
+
+    
+## Bycatch SENS {.c}
+
+\tiny
+ 
+```{r bycatch-cpue-sens, out.width='12%', echo=FALSE, fig.align='center', fig.cap = 'Bycatch rates in SENS.' }
+region="cfasouth"
+o = observer.db( DS="bycatch_summary", p=p,  yrs=p$yrs, region=region )   
+o$bycatch_table = o$bycatch_table[ which(o$bycatch_table$"Average/Moyen" > 1 ),]
+o$bycatch_table$"Average/Moyen" = round(o$bycatch_table$"Average/Moyen")
+o$bycatch_table[ o$bycatch_table==0 ] = NA
+o$bycatch_table[ is.na(o$bycatch_table) ] = "."
+gt(o$bycatch_table)
+``` 
+\normalsize
+
+
+## Bycatch 4X {.c}
+
+\tiny
+ 
+```{r bycatch-cpue-4x, out.width='12%', echo=FALSE, fig.align='center', fig.cap = 'Bycatch rates in 4x.' }
+region="cfa4x"
+o = observer.db( DS="bycatch_summary", p=p,  yrs=p$yrs, region=region )   
+o$bycatch_table = o$bycatch_table[ which(o$bycatch_table$"Average/Moyen" > 1 ),]
+o$bycatch_table$"Average/Moyen" = round(o$bycatch_table$"Average/Moyen")
+o$bycatch_table[ o$bycatch_table==0 ] = NA
+o$bycatch_table[ is.na(o$bycatch_table) ] = "."
+gt(o$bycatch_table)
+``` 
+\normalsize
+
+
+
 
 # End
